--- a/tictactoe-rl/tictactoe_q_learning.ipynb
+++ b/tictactoe-rl/tictactoe_q_learning.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,10 @@
     "                states_x.append(state)\n",
     "                actions_x.append(step)\n",
     "            else:\n",
-    "                rewards_o.append(-reward)\n",
+    "                if reward == -10:\n",
+    "                    rewards_o.append(reward)\n",
+    "                else:\n",
+    "                    rewards_o.append(-reward)\n",
     "                states_o.append(state)\n",
     "                actions_o.append(step)\n",
     "            cur_player = (cur_player + 1) % 2\n",
@@ -77,13 +80,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17fe44bd03804a489f44f0779dc308a0",
+       "model_id": "dec3ba59f56943dbaac1dde7f8a96c68",
        "version_major": 2,
        "version_minor": 0
       },
@@ -97,10 +100,10 @@
     {
      "data": {
       "text/plain": [
-       "0.3052"
+       "0.2748"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,15 +146,20 @@
     "        #     # here we need reward[t + 1], s[t + 1]\n",
     "        #     self.q[state][action] += self.alpha * (reward + self.gamma * np.max(self.q[state_next][action])) - self.q[state][action]\n",
     "        self.total_episodes_training += 1\n",
+    "        for episode_step in episode_history:\n",
+    "            state, _, _ = episode_step\n",
+    "            state_hash = state[0]\n",
+    "            impossible_actions = np.where(np.array([*state_hash]) != '1')\n",
+    "            self.q_table[state_hash][impossible_actions] = -np.inf\n",
     "        for t in range(1, len(episode_history)):\n",
     "            # to r[t - 1], s[t - 1]\n",
     "            state_cur, action_cur, _ = episode_history[t - 1]\n",
     "            state_next, _, reward_next = episode_history[t]\n",
     "            state_cur_hash, state_next_hash = state_cur[0], state_next[0]\n",
+    "            \n",
     "            action_id = self.possible_actions.index(action_cur)\n",
     "            # here we need reward[t + 1], s[t + 1]\n",
-    "            self.q_table[state_cur_hash][action_id] += self.alpha * (reward_next +\\\n",
-    "                                 self.gamma * np.max(self.q_table[state_next_hash][action_id]) - self.q_table[state_cur_hash][action_id])\n",
+    "            self.q_table[state_cur_hash][action_id] += self.alpha * (reward_next + self.gamma * np.max(self.q_table[state_next_hash][action_id]) - self.q_table[state_cur_hash][action_id])\n",
     "\n",
     "    def strategy(self, state):\n",
     "        state_hash = state[0]\n",
@@ -177,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,199 +207,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "history_x, history_o = game.run_episode(qplayer_x, qplayer_o, True)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[10]"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[el[2] for el in history_o]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "qplayer_x.update_q(history_x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(<function __main__.QLearningPlayer.__init__.<locals>.<lambda>()>,\n",
-       "            {'111111111': array([0., 0., 0., 0., 0., 0., 0., 0., 0.])})"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "qplayer_x.q_table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 301,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[10]"
-      ]
-     },
-     "execution_count": 301,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[el[2] for el in history_o]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "qplayer_o.update_q(history_o)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(('211111111',\n",
-       "   array([[0, 1],\n",
-       "          [0, 2],\n",
-       "          [1, 0],\n",
-       "          [1, 1],\n",
-       "          [1, 2],\n",
-       "          [2, 0],\n",
-       "          [2, 1],\n",
-       "          [2, 2]], dtype=int64),\n",
-       "   -1),\n",
-       "  (0, 0),\n",
-       "  0)]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "history_x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "episode_history = history_o\n",
-    "for t in range(1, len(episode_history)):\n",
-    "    state_cur, action_cur, _ = episode_history[t - 1]\n",
-    "    state_next, _, reward_next = episode_history[t]\n",
-    "    state_cur_hash, state_next_hash = state_cur[0], state_next[0] \n",
-    "    action_id = 0\n",
-    "    print(state_next)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(('211111111',\n",
-       "   array([[0, 1],\n",
-       "          [0, 2],\n",
-       "          [1, 0],\n",
-       "          [1, 1],\n",
-       "          [1, 2],\n",
-       "          [2, 0],\n",
-       "          [2, 1],\n",
-       "          [2, 2]], dtype=int64),\n",
-       "   -1),\n",
-       "  (0, 0),\n",
-       "  10)]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "history_o"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(<function __main__.QLearningPlayer.__init__.<locals>.<lambda>()>,\n",
-       "            {'211111111': array([0., 0., 0., 0., 0., 0., 0., 0., 0.])})"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "qplayer_o.q_table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "440788710ba04428814c20daa03732b0",
+       "model_id": "94bc3fbb941a417a89885330f619486d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tazizov\\AppData\\Local\\Temp/ipykernel_848/1255583138.py:37: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  self.q_table[state_cur_hash][action_id] += self.alpha * (reward_next + self.gamma * np.max(self.q_table[state_next_hash][action_id]) - self.q_table[state_cur_hash][action_id])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in tqdm(range(10)):\n",
+    "    history_x, history_o = game.run_episode(qplayer_x, qplayer_o, True)\n",
+    "    \n",
+    "    qplayer_x.update_q(history_x)\n",
+    "    qplayer_o.update_q(history_o)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8721ea6a9da04d6994501678d48621b7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -403,23 +268,18 @@
      "output_type": "display_data"
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_3260/1047424783.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mgame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcheck_mean_reward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mqplayer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mqplayer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m100000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_3260/2508879411.py\u001b[0m in \u001b[0;36mcheck_mean_reward\u001b[1;34m(self, player_x, player_o, n_iter)\u001b[0m\n\u001b[0;32m     35\u001b[0m         \u001b[0mrewards_x\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_iter\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 37\u001b[1;33m             \u001b[0mreward_x\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_episode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mplayer_x\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mplayer_o\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     38\u001b[0m             \u001b[0mrewards_x\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreward_x\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     39\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrewards_x\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_3260/2508879411.py\u001b[0m in \u001b[0;36mrun_episode\u001b[1;34m(self, player_x, player_o, return_history)\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[0mcur_player\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[1;32mwhile\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mis_done\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m             \u001b[0mstep\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mplayers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcur_player\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrategy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m             \u001b[0mstate\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreward\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mis_done\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mcur_player\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_3260/2769283694.py\u001b[0m in \u001b[0;36mstrategy\u001b[1;34m(self, state)\u001b[0m\n\u001b[0;32m     20\u001b[0m         \u001b[0mstate_hash\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstate\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m         \u001b[0mcoin\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m         \u001b[0mgreedy_action\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgreedy_step\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate_hash\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     23\u001b[0m         \u001b[0mrandom_action\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom_step\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtraining\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_3260/2769283694.py\u001b[0m in \u001b[0;36mgreedy_step\u001b[1;34m(self, state_hash)\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mgreedy_step\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstate_hash\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 35\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mactions\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mq_table\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstate_hash\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     36\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     37\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mrandom_step\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
+     "data": {
+      "text/plain": [
+       "-0.67696"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "game.check_mean_reward(qplayer, qplayer, 100000)"
+    "game.check_mean_reward(qplayer_x, qplayer_o, 100000)"
    ]
   },
   {
@@ -440,6 +300,69 @@
    ],
    "source": [
     "game.run_episode(qplayer, qplayer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "af256a2c14764f8d9fa3fd1a707730eb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/100000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-0.98386"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game.check_mean_reward(qplayer_x, player_o, 100000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q_table_x = qplayer_x.q_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all([item[1] for item in list(q_table_x.items())])"
    ]
   },
   {
