--- a/tictactoe-rl/tictactoe_q_learning.ipynb
+++ b/tictactoe-rl/tictactoe_q_learning.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from tictactoe_env import TicTacToe\n",
-    "from tictactoe_debug import TicTacToeGame, QLearningPlayer, RandomPlayer, Trainer\n",
+    "from tictactoe_debug import TicTacToeGame, QLearningPlayer, RandomPlayer, Trainer, DQNPlayer\n",
     "import numpy as np\n",
     "from tqdm.notebook import tqdm\n",
     "from collections import defaultdict\n",
@@ -541,12 +541,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 126,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from tictactoe_debug import DQNet, DQNPlayer, ReplayMemory"
+    "### 3x3"
    ]
   },
   {
@@ -555,15 +553,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rplayer = RandomPlayer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 298,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "rplayer = RandomPlayer()\n",
     "env = TicTacToe(3, 3)\n",
     "game = TicTacToeGame(env)\n",
     "trainer = Trainer(game)"
@@ -571,62 +561,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e36fd94f4bc4b4a88791e9bbddf0675",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1000000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "memory_x, memory_o = ReplayMemory(10000), ReplayMemory(10000)\n",
-    "player_x = DQNPlayer(0.2, 0.01, 0.7, 3, 3)\n",
-    "player_o = RandomPlayer()\n",
-    "loss = 1000\n",
-    "pbar = tqdm(range(1000000))\n",
-    "for i in pbar:\n",
-    "    pbar.set_description(f'loss={loss: .4f}')\n",
-    "    states, actions, rewards = game.run_episode(player_x, player_o, return_history=True)\n",
-    "    (states_x, states_o), (actions_x, actions_o), (rewards_x, rewards_o) = states, actions, rewards\n",
-    "    for t in range(len(states_x)):\n",
-    "        state, action, reward = states_x[t][0], player_x.all_actions.index(tuple(actions_x[t])), rewards_x[t]\n",
-    "        if t < len(states_x) - 1:\n",
-    "            state_next = states_x[t + 1][0]\n",
-    "        else:\n",
-    "            state_next = '999999999'\n",
-    "        exptuple_x = (state, action, reward, state_next)\n",
-    "        memory_x.store(exptuple=exptuple_x)\n",
-    "    for t in range(len(states_o)):\n",
-    "        state, action, reward = states_o[t][0], player_x.all_actions.index(tuple(actions_o[t].tolist())), rewards_o[t]\n",
-    "        if t < len(states_o) - 1:\n",
-    "            state_next = states_o[t + 1][0]\n",
-    "        else:\n",
-    "            state_next = '999999999'\n",
-    "        exptuple_o = (state, action, reward, state_next)\n",
-    "        memory_o.store(exptuple=exptuple_o)\n",
-    "    if (i + 1)  % 512 == 0:\n",
-    "        states, actions, rewards, states_next = zip(*memory_x.sample(512))\n",
-    "        loss = player_x.update_q((states, actions, rewards, states_next))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [],
    "source": [
-    "player_x = DQNPlayer(0.2, 0.01, 0.7, 3, 3)"
+    "model_x = torch.load('./dqn_player33_x_h128.pt')\n",
+    "model_o = torch.load('./dqn_player33_o_h128.pt')\n",
+    "player_x = DQNPlayer(eps=0.2, alpha=0.01, gamma=0.7, n_rows=3, n_cols=3, model=model_x)\n",
+    "player_o = DQNPlayer(0.2, 0.01, 0.7, 3, 3, model=model_o)"
    ]
   },
   {
@@ -650,27 +592,18 @@
     }
    ],
    "source": [
-    "trainer.train_deep('x', player_x, RandomPlayer(), batch_size=512, epochs=1500)"
+    "# trainer.train_deep('x', player_x, RandomPlayer(), batch_size=512, epochs=1500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "player_x.set_evaluating()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c927df71f6eb4f548dc02023eef11cfc",
+       "model_id": "817e051a809f4806903a7804d55e9b4c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -684,25 +617,16 @@
     {
      "data": {
       "text/plain": [
-       "{'wins_x': 9672, 'wins_o': 177, 'draws': 151, 'missx': 0, 'misso': 0}"
+       "{'wins_x': 9686, 'wins_o': 178, 'draws': 136, 'missx': 0, 'misso': 0}"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 310,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "game.check_rewards(player_x, RandomPlayer())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 295,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "player_o = DQNPlayer(0.2, 0.01, 0.7, 3, 3)"
    ]
   },
   {
@@ -726,18 +650,18 @@
     }
    ],
    "source": [
-    "trainer.train_deep('o', player_o, RandomPlayer(), batch_size=512, epochs=1500)"
+    "# trainer.train_deep('o', player_o, RandomPlayer(), batch_size=512, epochs=1500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ff75e4547aa4164a8631810a5e1167e",
+       "model_id": "746dbcc811214c26ba525cde342abfee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -751,10 +675,10 @@
     {
      "data": {
       "text/plain": [
-       "{'wins_x': 1698, 'wins_o': 7072, 'draws': 1230, 'missx': 0, 'misso': 0}"
+       "{'wins_x': 1651, 'wins_o': 7135, 'draws': 1214, 'missx': 0, 'misso': 0}"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 311,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,13 +689,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd97e80916a346d9ade4b6717216bf67",
+       "model_id": "d2090ccabb2a4603b88af7c3455920e3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -788,129 +712,7 @@
        "{'wins_x': 0, 'wins_o': 0, 'draws': 10000, 'missx': 0, 'misso': 0}"
       ]
      },
-     "execution_count": 302,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "game.check_rewards(player_x, player_o)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 304,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# player_x.save('./dqn_player33_x_h128.pt')\n",
-    "# player_o.save('./dqn_player33_o_h128.pt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 305,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "player_x.load('./dqn_player33_x_h128.pt')\n",
-    "player_o.load('./dqn_player33_x_h128.pt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 306,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58364e5a06d34719a49a12114ed7d1b1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/10000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'wins_x': 9679, 'wins_o': 188, 'draws': 133, 'missx': 0, 'misso': 0}"
-      ]
-     },
-     "execution_count": 306,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "game.check_rewards(player_x, RandomPlayer())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 307,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9375cc5ce6f9423eae5eb941c938154b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/10000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'wins_x': 602, 'wins_o': 4525, 'draws': 4873, 'missx': 0, 'misso': 0}"
-      ]
-     },
-     "execution_count": 307,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "game.check_rewards(RandomPlayer(), player_o)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 308,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42671bf299684eca8e8ed7960dd2dbd1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/10000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'wins_x': 0, 'wins_o': 0, 'draws': 10000, 'missx': 0, 'misso': 0}"
-      ]
-     },
-     "execution_count": 308,
+     "execution_count": 312,
      "metadata": {},
      "output_type": "execute_result"
     }
